--- a/web/themes/joinup/prototype/sass/components/_sidebar-menu.sass
+++ b/web/themes/joinup/prototype/sass/components/_sidebar-menu.sass
@@ -5,7 +5,7 @@
 // Component
 // --------------------------------------------------
 .sidebar-menu
-  z-index: 2
+  z-index: 999
   position: relative
   +breakpoint(desktop)
     width: 100%
